// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots HelloWorld component Renders a capitalized name 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div>
      <h1>
        THOMAS NOELCKE
      </h1>
      <style
        jsx={true}
      >
        
      h1 {
        color: gray;
        font-family: "PT Sans Caption"
      }
    
      </style>
    </div>
  </div>
</div>
`;

exports[`Storyshots HelloWorld component Renders a lowercased name 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div>
      <h1>
        Thomas Noelcke
      </h1>
      <style
        jsx={true}
      >
        
      h1 {
        color: gray;
        font-family: "PT Sans Caption"
      }
    
      </style>
    </div>
  </div>
</div>
`;
